# projeto_pigdice

./: .gitignore  README.md  author.md
src/: CMakeLists.txt  main.cpp  pigdice_common.h  pigdice_game.cpp  pigdice_game.h  player.cpp  player.h
